examples/kubernetes/connectivity-check/connectivity-check-quarantine.yaml
# Automatically generated by Makefile. DO NOT EDIT
---
metadata:
  name: pod-to-a-multi-node-hostport-proxy-egress
  labels:
    name: pod-to-a-multi-node-hostport-proxy-egress
    topology: multi-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-a-multi-node-hostport-proxy-egress
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-a-multi-node-hostport-proxy-egress-allow-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
      - name: pod-to-a-multi-node-hostport-proxy-egress-reject-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c-host-headless:40001/private'
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-a
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-a-multi-node-hostport-proxy-egress
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-a-intra-node-hostport-proxy-egress
  labels:
    name: pod-to-a-intra-node-hostport-proxy-egress
    topology: intra-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-a-intra-node-hostport-proxy-egress
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-a-intra-node-hostport-proxy-egress-allow-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
      - name: pod-to-a-intra-node-hostport-proxy-egress-reject-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c-host-headless:40001/private'
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-a
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-a-intra-node-hostport-proxy-egress
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-c-multi-node-hostport-proxy-ingress
  labels:
    name: pod-to-c-multi-node-hostport-proxy-ingress
    topology: multi-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-c-multi-node-hostport-proxy-ingress
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-c-multi-node-hostport-proxy-ingress-allow-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
      - name: pod-to-c-multi-node-hostport-proxy-ingress-reject-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c-host-headless:40001/private'
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-c-multi-node-hostport-proxy-ingress
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-c-intra-node-hostport-proxy-ingress
  labels:
    name: pod-to-c-intra-node-hostport-proxy-ingress
    topology: intra-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-c-intra-node-hostport-proxy-ingress
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-c-intra-node-hostport-proxy-ingress-allow-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
      - name: pod-to-c-intra-node-hostport-proxy-ingress-reject-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c-host-headless:40001/private'
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-c-intra-node-hostport-proxy-ingress
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-c-multi-node-hostport-proxy-to-proxy
  labels:
    name: pod-to-c-multi-node-hostport-proxy-to-proxy
    topology: multi-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-c-multi-node-hostport-proxy-to-proxy
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-c-multi-node-hostport-proxy-to-proxy-allow-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
      - name: pod-to-c-multi-node-hostport-proxy-to-proxy-reject-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c-host-headless:40001/private'
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-c-multi-node-hostport-proxy-to-proxy
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-c-intra-node-hostport-proxy-to-proxy
  labels:
    name: pod-to-c-intra-node-hostport-proxy-to-proxy
    topology: intra-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-c-intra-node-hostport-proxy-to-proxy
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-c-intra-node-hostport-proxy-to-proxy-allow-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c-host-headless:40001/public
      - name: pod-to-c-intra-node-hostport-proxy-to-proxy-reject-container
        ports: []
        image: quay.io/cilium/alpine-curl:v1.5.0@sha256:7b286939730d8af1149ef88dba15739d8330bb83d7d9853a23e5ab4043e2d33c
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        terminationMessagePolicy: FallbackToLogsOnError
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c-host-headless:40001/private'
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-c-intra-node-hostport-proxy-to-proxy
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-a-multi-node-hostport-proxy-egress
  labels:
    name: pod-to-a-multi-node-hostport-proxy-egress
    topology: multi-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-a-multi-node-hostport-proxy-egress
  egress:
  - toPorts:
    - ports:
      - port: "40001"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: node-local-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: pod-to-a-intra-node-hostport-proxy-egress
  labels:
    name: pod-to-a-intra-node-hostport-proxy-egress
    topology: intra-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-a-intra-node-hostport-proxy-egress
  egress:
  - toPorts:
    - ports:
      - port: "40001"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: node-local-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: pod-to-c-multi-node-hostport-proxy-to-proxy
  labels:
    name: pod-to-c-multi-node-hostport-proxy-to-proxy
    topology: multi-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-c-multi-node-hostport-proxy-to-proxy
  egress:
  - toPorts:
    - ports:
      - port: "40001"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: node-local-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: pod-to-c-intra-node-hostport-proxy-to-proxy
  labels:
    name: pod-to-c-intra-node-hostport-proxy-to-proxy
    topology: intra-node
    component: hostport-check
    traffic: internal
    quarantine: "true"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-c-intra-node-hostport-proxy-to-proxy
  egress:
  - toPorts:
    - ports:
      - port: "40001"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: node-local-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy


---
metadata:
  name: echo-a
  labels:
    name: echo-a
    topology: any
    component: network-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-a
    spec:
      hostNetwork: false
      containers:
      - name: echo-a-container
        ports:
        - containerPort: 8080
        image: quay.io/cilium/json-mock:v1.3.8@sha256:5aad04835eda9025fe4561ad31be77fd55309af8158ca8663a72f6abb78c2603
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
  selector:
    matchLabels:
      name: echo-a
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: echo-a
  labels:
    name: echo-a
    topology: any
    component: network-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports:
  - name: http
    port: 8080
  type: ClusterIP
  selector:
    name: echo-a
apiVersion: v1
kind: Service

---
metadata:
  name: echo-b
  labels:
    name: echo-b
    topology: any
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-b
    spec:
      hostNetwork: false
      containers:
      - name: echo-b-container
        ports:
        - containerPort: 8080
          hostPort: 40000
        image: quay.io/cilium/json-mock:v1.3.8@sha256:5aad04835eda9025fe4561ad31be77fd55309af8158ca8663a72f6abb78c2603
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
  selector:
    matchLabels:
      name: echo-b
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: echo-b
  labels:
    name: echo-b
    topology: any
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports:
  - name: http
    port: 8080
    nodePort: 30014
  type: NodePort
  selector:
    name: echo-b
apiVersion: v1
kind: Service

---
metadata:
  name: echo-b-host
  labels:
    name: echo-b-host
    topology: any
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-b-host
    spec:
      hostNetwork: true
      containers:
      - name: echo-b-host-container
        ports: []
        image: quay.io/cilium/json-mock:v1.3.8@sha256:5aad04835eda9025fe4561ad31be77fd55309af8158ca8663a72f6abb78c2603
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:21000
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:21000
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: echo-b-host
  replicas: 1
apiVersion: apps/v1
kind: Deployment

---
metadata:
  name: echo-b-host-headless
  labels:
    name: echo-b-host-headless
    topology: any
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports: []
  type: ClusterIP
  selector:
    name: echo-b-host
  clusterIP: None
apiVersion: v1
kind: Service

---
metadata:
  name: echo-c
  labels:
    name: echo-c
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-c
    spec:
      hostNetwork: false
      containers:
      - name: echo-c-container
        ports:
        - containerPort: 8080
          hostPort: 40001
        image: quay.io/cilium/json-mock:v1.3.8@sha256:5aad04835eda9025fe4561ad31be77fd55309af8158ca8663a72f6abb78c2603
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
  selector:
    matchLabels:
      name: echo-c
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: echo-c
  labels:
    name: echo-c
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports:
  - name: http
    port: 8080
  type: ClusterIP
  selector:
    name: echo-c
apiVersion: v1
kind: Service
---
metadata:
  name: echo-c
  labels:
    name: echo-c
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: echo-c
  ingress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy

---
metadata:
  name: echo-c-host
  labels:
    name: echo-c-host
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-c-host
    spec:
      hostNetwork: true
      containers:
      - name: echo-c-host-container
        ports: []
        image: quay.io/cilium/json-mock:v1.3.8@sha256:5aad04835eda9025fe4561ad31be77fd55309af8158ca8663a72f6abb78c2603
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:21002
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:21002
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: echo-c-host
  replicas: 1
apiVersion: apps/v1
kind: Deployment

---
metadata:
  name: echo-c-host-headless
  labels:
    name: echo-c-host-headless
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports: []
  type: ClusterIP
  selector:
    name: echo-c-host
  clusterIP: None
apiVersion: v1
kind: Service
